--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,13 @@
 version: '3'
 
 services:
-  db:
+  mysql :
     container_name: mysql8
     image: mysql:8
-    restart: always
-    volumes:
-      - "./db/conf.d:/etc/mysql/conf.d"
-      - "./db/data:/var/lib/mysql"
-      - "./db/initdb.d:/docker-entrypoint-initdb.d"
-      - "./data:/data"
     ports:
-      - 3306:3306
-    env_file: .env
+      - 3307:3306
     environment:
       MYSQL_ROOT_PASSWORD : root
       MYSQL_USER : moyeo
       MYSQL_PASSWORD : moyeo12!
       MYSQL_DATABASE : moyeo
-    command:
-      - --character-set-server=utfmb4
-      - --collation-server-utf8mb4_unicode_ci
