--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,5 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        show_sql:
+        format_sql: true
+        show_sql: true
